create simple db

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<form action="/cgi-bin/getmacaddr.py">
 		<p>Input Your Phone number</p>
 		<input type="text" name="phone">
-		<input type="submit" value="submit" name="" id="">
+		<input type="submit" value="submit">
 	</form>
 </body>
 </html>
