--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>Test For Captive portal</title>
 </head>
 <body>
-	<form action="/cgi-bin/getmacaddr.py">
+	<form action="/cgi-bin/getaccess.py">
 		<p>Input Your Phone number</p>
-		<input type="text" name="phone">
+		<input type="tel" name="phone">
 		<input type="submit" value="submit">
 	</form>
 </body>
